--- a/www/templates/playlist.html
+++ b/www/templates/playlist.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Playlist">
   <ion-content>
     <h1>Playlist</h1>
+
+    <button class="button button-block button-positive" ng-click="onAbrir()" >ABRIR DATEPICKER</button>
+
   </ion-content>
 </ion-view>
